# SPMD-IR-Paper-Code-Base

./: LICENSE  README.md
Collectives-Verification-Benchmark-Suite/: README.md
Collectives-Verification-Benchmark-Suite/ExtensionToMicrobenchSuite/mpi/: 001-yes.c  002-no.c  003-no.c  004-yes.c  005-no.c  006-no.c  007-yes.c  008-yes.c  009-field-sensitive-extended-no.c  010-splittedComm-no.c  (+14 more)
Collectives-Verification-Benchmark-Suite/ExtensionToMicrobenchSuite/mpi+nccl/: 003-no.cpp  004-yes.cpp
Collectives-Verification-Benchmark-Suite/ExtensionToMicrobenchSuite/mpi+shmem/: 003-a-no.c  003-b-no.c  004-a-yes.c  004-b-yes.c
Collectives-Verification-Benchmark-Suite/Microbenchmarks-PARCOACH/: README.md
SPMD-IR-and-Transformations-and-Analyses/spmd/: CMakeLists.txt  completePipeFile.sh
SPMD-IR-and-Transformations-and-Analyses/spmd/lib/spmd/: CMakeLists.txt  SPMDAttributes.cpp  SPMDDialect.cpp  SPMDOps.cpp  SPMDTypes.cpp
SPMD-IR-and-Transformations-and-Analyses/spmd/lib/spmd/Analysis/: CMakeLists.txt  ReachingDefinitionAnalysis.cpp  UniformityAnalysis.cpp
SPMD-IR-and-Transformations-and-Analyses/spmd/lib/spmd/Utils/: AliasUtils.cpp  CMakeLists.txt  TransformUtils.cpp
SPMD-IR-and-Transformations-and-Analyses/spmd/lib/spmd/passes/: CMakeLists.txt  CheckCollectives.cpp  ConvertApiCallsToSPMD.cpp  MultiValueAnalysis.cpp
SPMD-IR-and-Transformations-and-Analyses/spmd/lib/spmd/passes/CACTS/: CMakeLists.txt  mpiTransformations.cpp  mpiTransformations.h  ncclTransformations.cpp  ncclTransformations.h  shmemTransformations.cpp  shmemTransformations.h  utils.cpp  utils.h
(+397 files in other folders)
